initialise class structure

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,11 @@ biocViews: Software,
     Infrastructure
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
+Depends:
+    iSEE
+Imports:
+    methods
 Suggests: 
     BiocStyle,
     covr,
