--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,12 @@ exportClasses(PathwaysTable)
 exportMethods(.fullName)
 exportMethods(.generateTable)
 exportMethods(.panelColor)
+exportMethods(.refineParameters)
 exportMethods(.showSelectionDetails)
 importClassesFrom(iSEE,Table)
 importFrom(methods,new)
 importMethodsFrom(iSEE,.fullName)
 importMethodsFrom(iSEE,.generateTable)
 importMethodsFrom(iSEE,.panelColor)
+importMethodsFrom(iSEE,.refineParameters)
 importMethodsFrom(iSEE,.showSelectionDetails)
