add vignette demonstrating the display of gene ontology details

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,16 @@
 
 export(PathwaysTable)
 exportClasses(PathwaysTable)
+exportMethods(.createObservers)
 exportMethods(.fullName)
 exportMethods(.generateTable)
 exportMethods(.panelColor)
 exportMethods(.refineParameters)
 exportMethods(.showSelectionDetails)
 importClassesFrom(iSEE,Table)
+importFrom(iSEE,.getEncodedName)
 importFrom(methods,new)
+importMethodsFrom(iSEE,.createObservers)
 importMethodsFrom(iSEE,.fullName)
 importMethodsFrom(iSEE,.generateTable)
 importMethodsFrom(iSEE,.panelColor)
