declare imported method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ exportMethods(.refineParameters)
 exportMethods(.showSelectionDetails)
 importClassesFrom(iSEE,Table)
 importFrom(iSEE,.getEncodedName)
+importFrom(methods,callNextMethod)
 importFrom(methods,new)
 importMethodsFrom(iSEE,.createObservers)
 importMethodsFrom(iSEE,.fullName)
