--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,13 +8,22 @@ exportMethods(.generateTable)
 exportMethods(.panelColor)
 exportMethods(.refineParameters)
 exportMethods(.showSelectionDetails)
+exportMethods(initialize)
 importClassesFrom(iSEE,Table)
+importFrom(S4Vectors,metadata)
 importFrom(iSEE,.getEncodedName)
+importFrom(iSEE,.replaceMissingWithFirst)
+importFrom(iSEE,.requestActiveSelectionUpdate)
+importFrom(iSEE,.singleSelectionValue)
+importFrom(iSEE,.textEval)
+importFrom(iSEE,getAppOption)
 importFrom(methods,callNextMethod)
 importFrom(methods,new)
+importFrom(shiny,observeEvent)
 importMethodsFrom(iSEE,.createObservers)
 importMethodsFrom(iSEE,.fullName)
 importMethodsFrom(iSEE,.generateTable)
 importMethodsFrom(iSEE,.panelColor)
 importMethodsFrom(iSEE,.refineParameters)
 importMethodsFrom(iSEE,.showSelectionDetails)
+importMethodsFrom(methods,initialize)
