demonstrate integration with iSEEde (screenshot not working yet)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,9 @@ exportClasses(PathwaysTable)
 exportMethods(.createObservers)
 exportMethods(.fullName)
 exportMethods(.generateTable)
+exportMethods(.multiSelectionActive)
+exportMethods(.multiSelectionCommands)
+exportMethods(.multiSelectionDimension)
 exportMethods(.panelColor)
 exportMethods(.refineParameters)
 exportMethods(.showSelectionDetails)
@@ -23,6 +26,9 @@ importFrom(shiny,observeEvent)
 importMethodsFrom(iSEE,.createObservers)
 importMethodsFrom(iSEE,.fullName)
 importMethodsFrom(iSEE,.generateTable)
+importMethodsFrom(iSEE,.multiSelectionActive)
+importMethodsFrom(iSEE,.multiSelectionCommands)
+importMethodsFrom(iSEE,.multiSelectionDimension)
 importMethodsFrom(iSEE,.panelColor)
 importMethodsFrom(iSEE,.refineParameters)
 importMethodsFrom(iSEE,.showSelectionDetails)
