add more vignette dependencies

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,13 +27,16 @@ Suggests:
     airway,
     BiocStyle,
     covr,
+    edgeR,
     fgsea,
     GO.db,
+    iSEEde,
     knitr,
     org.Hs.eg.db,
     RefManageR,
     rmarkdown,
     scater,
+    scuttle,
     sessioninfo,
     SummarizedExperiment,
     testthat (>= 3.0.0)
