Demonstrate prototype of PathwaysTable panel (#4)
* initialise class structure

* add methods to display panel in live app

* add method .refineParameters (solves error when selecting a row)

* add vignette demonstrating the display of gene ontology details

* add missing vignette dependency

* add more vignette dependencies

* declare imported method

* add import/export declarations

* demonstrate integration with iSEEde (screenshot not working yet)

* store pathways as app options in object metadata

* more to-do

* add vignette dependency

* add vignette dependency

* add more vignette dependencies

* declare remote

* bioccheck do not quit with status

* install iSEEde from github

* install iSEEde using biocmanager

* r not bash

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,14 +16,31 @@ biocViews: Software,
     Infrastructure
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
-Suggests: 
+RoxygenNote: 7.2.3
+Depends:
+    iSEE
+Imports:
+    methods,
+    S4Vectors,
+    shiny
+Suggests:
+    airway,
     BiocStyle,
     covr,
+    edgeR,
+    fgsea,
+    GO.db,
+    iSEEde,
     knitr,
+    org.Hs.eg.db,
     RefManageR,
     rmarkdown,
+    scater,
+    scuttle,
     sessioninfo,
+    SummarizedExperiment,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 VignetteBuilder: knitr
+Remotes:
+    iSEE/iSEEde
