add classes and methods to record and process different pathway types

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(PathwaysTable)
 export(embedPathwaysResultsMethods)
 export(iSEEfgseaResults)
 exportClasses(PathwaysTable)
+exportClasses(iSEEpathwaysResults)
 exportMethods(.createObservers)
 exportMethods(.fullName)
 exportMethods(.generateTable)
@@ -15,6 +16,7 @@ exportMethods(.refineParameters)
 exportMethods(.showSelectionDetails)
 exportMethods(embedPathwaysResults)
 exportMethods(initialize)
+exportMethods(pathwayType)
 importClassesFrom(iSEE,Table)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
