--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,9 @@ export(embedPathwaysResultsMethods)
 export(iSEEfgseaResults)
 exportClasses(PathwaysTable)
 exportClasses(iSEEpathwaysResults)
+exportMethods(.cacheCommonInfo)
 exportMethods(.createObservers)
+exportMethods(.defineDataInterface)
 exportMethods(.fullName)
 exportMethods(.generateTable)
 exportMethods(.multiSelectionActive)
@@ -20,17 +22,26 @@ exportMethods(pathwayType)
 importClassesFrom(iSEE,Table)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
+importFrom(S4Vectors,setValidity2)
 importFrom(SummarizedExperiment,"metadata<-")
+importFrom(SummarizedExperiment,rowData)
+importFrom(iSEE,.addSpecificTour)
+importFrom(iSEE,.getCachedCommonInfo)
 importFrom(iSEE,.getEncodedName)
 importFrom(iSEE,.replaceMissingWithFirst)
 importFrom(iSEE,.requestActiveSelectionUpdate)
+importFrom(iSEE,.selectInput.iSEE)
+importFrom(iSEE,.setCachedCommonInfo)
 importFrom(iSEE,.singleSelectionValue)
 importFrom(iSEE,.textEval)
 importFrom(iSEE,getAppOption)
 importFrom(methods,callNextMethod)
 importFrom(methods,new)
+importFrom(shiny,hr)
 importFrom(shiny,observeEvent)
+importMethodsFrom(iSEE,.cacheCommonInfo)
 importMethodsFrom(iSEE,.createObservers)
+importMethodsFrom(iSEE,.defineDataInterface)
 importMethodsFrom(iSEE,.fullName)
 importMethodsFrom(iSEE,.generateTable)
 importMethodsFrom(iSEE,.multiSelectionActive)
