add missing imports; fix man page example

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(S4Vectors,setValidity2)
 importFrom(SummarizedExperiment,"metadata<-")
 importFrom(SummarizedExperiment,rowData)
 importFrom(iSEE,.addSpecificTour)
+importFrom(iSEE,.createProtectedParameterObservers)
 importFrom(iSEE,.getCachedCommonInfo)
 importFrom(iSEE,.getEncodedName)
 importFrom(iSEE,.replaceMissingWithFirst)
@@ -35,8 +36,11 @@ importFrom(iSEE,.setCachedCommonInfo)
 importFrom(iSEE,.singleSelectionValue)
 importFrom(iSEE,.textEval)
 importFrom(iSEE,getAppOption)
+importFrom(methods,as)
 importFrom(methods,callNextMethod)
 importFrom(methods,new)
+importFrom(methods,slot)
+importFrom(methods,validObject)
 importFrom(shiny,hr)
 importFrom(shiny,observeEvent)
 importMethodsFrom(iSEE,.cacheCommonInfo)
