Add classes and methods to manage different types of pathway analysis results and databases (#8)
* add classes and methods to record and process different pathway types

* add data interface with dropdown for pathway analysis results

* fix vignette and update documentation

* adjust iSEEfgseaResults constructor

* add missing imports; fix man page example

* add missing aliases in man pages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,10 @@ export(PathwaysTable)
 export(embedPathwaysResultsMethods)
 export(iSEEfgseaResults)
 exportClasses(PathwaysTable)
+exportClasses(iSEEpathwaysResults)
+exportMethods(.cacheCommonInfo)
 exportMethods(.createObservers)
+exportMethods(.defineDataInterface)
 exportMethods(.fullName)
 exportMethods(.generateTable)
 exportMethods(.multiSelectionActive)
@@ -15,20 +18,34 @@ exportMethods(.refineParameters)
 exportMethods(.showSelectionDetails)
 exportMethods(embedPathwaysResults)
 exportMethods(initialize)
+exportMethods(pathwayType)
 importClassesFrom(iSEE,Table)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
+importFrom(S4Vectors,setValidity2)
 importFrom(SummarizedExperiment,"metadata<-")
+importFrom(SummarizedExperiment,rowData)
+importFrom(iSEE,.addSpecificTour)
+importFrom(iSEE,.createProtectedParameterObservers)
+importFrom(iSEE,.getCachedCommonInfo)
 importFrom(iSEE,.getEncodedName)
 importFrom(iSEE,.replaceMissingWithFirst)
 importFrom(iSEE,.requestActiveSelectionUpdate)
+importFrom(iSEE,.selectInput.iSEE)
+importFrom(iSEE,.setCachedCommonInfo)
 importFrom(iSEE,.singleSelectionValue)
 importFrom(iSEE,.textEval)
 importFrom(iSEE,getAppOption)
+importFrom(methods,as)
 importFrom(methods,callNextMethod)
 importFrom(methods,new)
+importFrom(methods,slot)
+importFrom(methods,validObject)
+importFrom(shiny,hr)
 importFrom(shiny,observeEvent)
+importMethodsFrom(iSEE,.cacheCommonInfo)
 importMethodsFrom(iSEE,.createObservers)
+importMethodsFrom(iSEE,.defineDataInterface)
 importMethodsFrom(iSEE,.fullName)
 importMethodsFrom(iSEE,.generateTable)
 importMethodsFrom(iSEE,.multiSelectionActive)
