.defineOutput done; next up renderOutput

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ importFrom(methods,slot)
 importFrom(methods,validObject)
 importFrom(shiny,hr)
 importFrom(shiny,observeEvent)
+importFrom(shinyWidgets,addSpinner)
 importMethodsFrom(iSEE,.cacheCommonInfo)
 importMethodsFrom(iSEE,.createObservers)
 importMethodsFrom(iSEE,.defineDataInterface)
