part hardcoded but visually functional fgsea plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ exportMethods(.multiSelectionCommands)
 exportMethods(.multiSelectionDimension)
 exportMethods(.panelColor)
 exportMethods(.refineParameters)
+exportMethods(.renderOutput)
 exportMethods(.showSelectionDetails)
 exportMethods(embedPathwaysResults)
 exportMethods(initialize)
@@ -34,6 +35,7 @@ importFrom(iSEE,.getCachedCommonInfo)
 importFrom(iSEE,.getEncodedName)
 importFrom(iSEE,.replaceMissingWithFirst)
 importFrom(iSEE,.requestActiveSelectionUpdate)
+importFrom(iSEE,.retrieveOutput)
 importFrom(iSEE,.selectInput.iSEE)
 importFrom(iSEE,.setCachedCommonInfo)
 importFrom(iSEE,.singleSelectionValue)
@@ -58,5 +60,6 @@ importMethodsFrom(iSEE,.multiSelectionCommands)
 importMethodsFrom(iSEE,.multiSelectionDimension)
 importMethodsFrom(iSEE,.panelColor)
 importMethodsFrom(iSEE,.refineParameters)
+importMethodsFrom(iSEE,.renderOutput)
 importMethodsFrom(iSEE,.showSelectionDetails)
 importMethodsFrom(methods,initialize)
