setup observers for result name and pathway id; add pathways and stats in the embedded results

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ exportMethods(.createObservers)
 exportMethods(.defineDataInterface)
 exportMethods(.defineOutput)
 exportMethods(.fullName)
+exportMethods(.generateOutput)
 exportMethods(.generateTable)
 exportMethods(.multiSelectionActive)
 exportMethods(.multiSelectionCommands)
@@ -23,6 +24,8 @@ exportMethods(.showSelectionDetails)
 exportMethods(embedPathwaysResults)
 exportMethods(initialize)
 exportMethods(pathwayType)
+exportMethods(pathways)
+exportMethods(stats)
 importClassesFrom(iSEE,Table)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
@@ -54,6 +57,7 @@ importMethodsFrom(iSEE,.createObservers)
 importMethodsFrom(iSEE,.defineDataInterface)
 importMethodsFrom(iSEE,.defineOutput)
 importMethodsFrom(iSEE,.fullName)
+importMethodsFrom(iSEE,.generateOutput)
 importMethodsFrom(iSEE,.generateTable)
 importMethodsFrom(iSEE,.multiSelectionActive)
 importMethodsFrom(iSEE,.multiSelectionCommands)
