remove selection parameters box for FgseaEnrichmentPlot panel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ exportClasses(iSEEpathwaysResults)
 exportMethods(.cacheCommonInfo)
 exportMethods(.createObservers)
 exportMethods(.defineDataInterface)
+exportMethods(.defineInterface)
 exportMethods(.defineOutput)
 exportMethods(.fullName)
 exportMethods(.generateOutput)
