add brushdata; rename stats generics to featuresStats

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,10 +23,10 @@ exportMethods(.refineParameters)
 exportMethods(.renderOutput)
 exportMethods(.showSelectionDetails)
 exportMethods(embedPathwaysResults)
+exportMethods(featuresStats)
 exportMethods(initialize)
 exportMethods(pathwayType)
 exportMethods(pathways)
-exportMethods(stats)
 importClassesFrom(iSEE,Table)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
