add generic pending definition in iSEE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ exportMethods(.defineOutput)
 exportMethods(.fullName)
 exportMethods(.generateOutput)
 exportMethods(.generateTable)
+exportMethods(.isBrushable)
 exportMethods(.multiSelectionActive)
 exportMethods(.multiSelectionCommands)
 exportMethods(.multiSelectionDimension)
@@ -60,6 +61,7 @@ importMethodsFrom(iSEE,.defineOutput)
 importMethodsFrom(iSEE,.fullName)
 importMethodsFrom(iSEE,.generateOutput)
 importMethodsFrom(iSEE,.generateTable)
+importMethodsFrom(iSEE,.isBrushable)
 importMethodsFrom(iSEE,.multiSelectionActive)
 importMethodsFrom(iSEE,.multiSelectionCommands)
 importMethodsFrom(iSEE,.multiSelectionDimension)
