--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,5 +44,5 @@ Suggests:
 Config/testthat/edition: 3
 VignetteBuilder: knitr
 Remotes:
-    iSEE/iSEE@kra-brushable,
+    iSEE/iSEE,
     iSEE/iSEEde
