import geom_rect

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ importFrom(S4Vectors,metadata)
 importFrom(S4Vectors,setValidity2)
 importFrom(SummarizedExperiment,"metadata<-")
 importFrom(SummarizedExperiment,rowData)
+importFrom(ggplot2,geom_rect)
 importFrom(iSEE,.addSpecificTour)
 importFrom(iSEE,.createProtectedParameterObservers)
 importFrom(iSEE,.getCachedCommonInfo)
