Fgsea plot pending generic (#12)
* checkpoint with brush drawn using a local hack of iSEE; need a generic .isBrushable() that is TRUE for DotPlot and FgseaEnrichmentPlot but not other panels

* add generic pending definition in iSEE

* fix command and use new generic

* change remote for iSEE/iSEE

* FgseaEnrichmentPlot only transmits features in the pathway

* first part of fix to #10

* adjust pathway analysis using uniquified rownames

* remove temporary iSEE/iSEE from Remotes; tweak initial config in vignette

* add missing import

* import geom_rect

* add missing ggplot2 import

---------

Co-authored-by: Kevin Rue <kevinrue@users.noreply.github.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ exportMethods(.defineOutput)
 exportMethods(.fullName)
 exportMethods(.generateOutput)
 exportMethods(.generateTable)
+exportMethods(.isBrushable)
 exportMethods(.multiSelectionActive)
 exportMethods(.multiSelectionCommands)
 exportMethods(.multiSelectionDimension)
@@ -33,6 +34,7 @@ importFrom(S4Vectors,metadata)
 importFrom(S4Vectors,setValidity2)
 importFrom(SummarizedExperiment,"metadata<-")
 importFrom(SummarizedExperiment,rowData)
+importFrom(ggplot2,geom_rect)
 importFrom(iSEE,.addSpecificTour)
 importFrom(iSEE,.createProtectedParameterObservers)
 importFrom(iSEE,.getCachedCommonInfo)
@@ -60,6 +62,7 @@ importMethodsFrom(iSEE,.defineOutput)
 importMethodsFrom(iSEE,.fullName)
 importMethodsFrom(iSEE,.generateOutput)
 importMethodsFrom(iSEE,.generateTable)
+importMethodsFrom(iSEE,.isBrushable)
 importMethodsFrom(iSEE,.multiSelectionActive)
 importMethodsFrom(iSEE,.multiSelectionCommands)
 importMethodsFrom(iSEE,.multiSelectionDimension)
