--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,9 +21,11 @@ Depends:
     iSEE
 Imports:
     BiocGenerics,
+    ggplot2,
     methods,
     S4Vectors,
     shiny,
+    shinyWidgets,
     SummarizedExperiment
 Suggests:
     airway,
