--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,9 +20,12 @@ RoxygenNote: 7.2.3
 Depends:
     iSEE
 Imports:
+    BiocGenerics,
+    ggplot2,
     methods,
     S4Vectors,
     shiny,
+    shinyWidgets,
     SummarizedExperiment
 Suggests:
     airway,
