--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,13 +47,17 @@ importFrom(iSEE,.setCachedCommonInfo)
 importFrom(iSEE,.singleSelectionValue)
 importFrom(iSEE,.textEval)
 importFrom(iSEE,getAppOption)
+importFrom(methods,"slot<-")
 importFrom(methods,as)
 importFrom(methods,callNextMethod)
 importFrom(methods,new)
 importFrom(methods,slot)
 importFrom(methods,validObject)
+importFrom(shiny,brushOpts)
 importFrom(shiny,hr)
 importFrom(shiny,observeEvent)
+importFrom(shiny,plotOutput)
+importFrom(shiny,updateSelectizeInput)
 importFrom(shinyWidgets,addSpinner)
 importMethodsFrom(iSEE,.cacheCommonInfo)
 importMethodsFrom(iSEE,.createObservers)
@@ -63,6 +67,7 @@ importMethodsFrom(iSEE,.defineOutput)
 importMethodsFrom(iSEE,.fullName)
 importMethodsFrom(iSEE,.generateOutput)
 importMethodsFrom(iSEE,.generateTable)
+importMethodsFrom(iSEE,.getPanelColor)
 importMethodsFrom(iSEE,.isBrushable)
 importMethodsFrom(iSEE,.multiSelectionActive)
 importMethodsFrom(iSEE,.multiSelectionCommands)
@@ -70,5 +75,6 @@ importMethodsFrom(iSEE,.multiSelectionDimension)
 importMethodsFrom(iSEE,.panelColor)
 importMethodsFrom(iSEE,.refineParameters)
 importMethodsFrom(iSEE,.renderOutput)
+importMethodsFrom(iSEE,.selectizeInput.iSEE)
 importMethodsFrom(iSEE,.showSelectionDetails)
 importMethodsFrom(methods,initialize)
