fix type of import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,10 +39,12 @@ importFrom(iSEE,.addSpecificTour)
 importFrom(iSEE,.createProtectedParameterObservers)
 importFrom(iSEE,.getCachedCommonInfo)
 importFrom(iSEE,.getEncodedName)
+importFrom(iSEE,.getPanelColor)
 importFrom(iSEE,.replaceMissingWithFirst)
 importFrom(iSEE,.requestActiveSelectionUpdate)
 importFrom(iSEE,.retrieveOutput)
 importFrom(iSEE,.selectInput.iSEE)
+importFrom(iSEE,.selectizeInput.iSEE)
 importFrom(iSEE,.setCachedCommonInfo)
 importFrom(iSEE,.singleSelectionValue)
 importFrom(iSEE,.textEval)
@@ -67,7 +69,6 @@ importMethodsFrom(iSEE,.defineOutput)
 importMethodsFrom(iSEE,.fullName)
 importMethodsFrom(iSEE,.generateOutput)
 importMethodsFrom(iSEE,.generateTable)
-importMethodsFrom(iSEE,.getPanelColor)
 importMethodsFrom(iSEE,.isBrushable)
 importMethodsFrom(iSEE,.multiSelectionActive)
 importMethodsFrom(iSEE,.multiSelectionCommands)
@@ -75,6 +76,5 @@ importMethodsFrom(iSEE,.multiSelectionDimension)
 importMethodsFrom(iSEE,.panelColor)
 importMethodsFrom(iSEE,.refineParameters)
 importMethodsFrom(iSEE,.renderOutput)
-importMethodsFrom(iSEE,.selectizeInput.iSEE)
 importMethodsFrom(iSEE,.showSelectionDetails)
 importMethodsFrom(methods,initialize)
