--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ exportMethods(featuresStats)
 exportMethods(initialize)
 exportMethods(pathwayType)
 exportMethods(pathways)
+importClassesFrom(iSEE,Panel)
 importClassesFrom(iSEE,Table)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
