fix rcmdcheck warning; add missing imports; minor edits to man pages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(FgseaEnrichmentPlot)
 export(PathwaysTable)
+export(embedPathwaysResults)
 export(embedPathwaysResultsMethods)
 export(iSEEfgseaResults)
 exportClasses(FgseaEnrichmentPlot)
@@ -28,19 +29,23 @@ exportMethods(featuresStats)
 exportMethods(initialize)
 exportMethods(pathwayType)
 exportMethods(pathways)
+importClassesFrom(SummarizedExperiment,SummarizedExperiment)
 importClassesFrom(iSEE,Panel)
 importClassesFrom(iSEE,Table)
+importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
 importFrom(S4Vectors,setValidity2)
-importFrom(SummarizedExperiment,"metadata<-")
-importFrom(SummarizedExperiment,rowData)
+importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_rect)
 importFrom(iSEE,.addSpecificTour)
 importFrom(iSEE,.createProtectedParameterObservers)
+importFrom(iSEE,.defineDataInterface)
 importFrom(iSEE,.getCachedCommonInfo)
 importFrom(iSEE,.getEncodedName)
 importFrom(iSEE,.getPanelColor)
+importFrom(iSEE,.multiSelectionActive)
+importFrom(iSEE,.organizationHeight)
 importFrom(iSEE,.replaceMissingWithFirst)
 importFrom(iSEE,.requestActiveSelectionUpdate)
 importFrom(iSEE,.retrieveOutput)
@@ -57,9 +62,11 @@ importFrom(methods,new)
 importFrom(methods,slot)
 importFrom(methods,validObject)
 importFrom(shiny,brushOpts)
+importFrom(shiny,brushedPoints)
 importFrom(shiny,hr)
 importFrom(shiny,observeEvent)
 importFrom(shiny,plotOutput)
+importFrom(shiny,renderPlot)
 importFrom(shiny,updateSelectizeInput)
 importFrom(shinyWidgets,addSpinner)
 importMethodsFrom(iSEE,.cacheCommonInfo)
