--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(FgseaEnrichmentPlot)
 export(PathwaysTable)
+export(embedPathwaysResults)
 export(embedPathwaysResultsMethods)
 export(iSEEfgseaResults)
 exportClasses(FgseaEnrichmentPlot)
@@ -28,36 +29,50 @@ exportMethods(featuresStats)
 exportMethods(initialize)
 exportMethods(pathwayType)
 exportMethods(pathways)
+importClassesFrom(SummarizedExperiment,SummarizedExperiment)
+importClassesFrom(iSEE,Panel)
 importClassesFrom(iSEE,Table)
+importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
 importFrom(S4Vectors,setValidity2)
-importFrom(SummarizedExperiment,"metadata<-")
-importFrom(SummarizedExperiment,rowData)
+importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_rect)
 importFrom(iSEE,.addSpecificTour)
 importFrom(iSEE,.createProtectedParameterObservers)
+importFrom(iSEE,.defineDataInterface)
 importFrom(iSEE,.getCachedCommonInfo)
 importFrom(iSEE,.getEncodedName)
+importFrom(iSEE,.getPanelColor)
+importFrom(iSEE,.multiSelectionActive)
+importFrom(iSEE,.organizationHeight)
 importFrom(iSEE,.replaceMissingWithFirst)
 importFrom(iSEE,.requestActiveSelectionUpdate)
 importFrom(iSEE,.retrieveOutput)
 importFrom(iSEE,.selectInput.iSEE)
+importFrom(iSEE,.selectizeInput.iSEE)
 importFrom(iSEE,.setCachedCommonInfo)
 importFrom(iSEE,.singleSelectionValue)
 importFrom(iSEE,.textEval)
 importFrom(iSEE,getAppOption)
+importFrom(methods,"slot<-")
 importFrom(methods,as)
 importFrom(methods,callNextMethod)
 importFrom(methods,new)
 importFrom(methods,slot)
 importFrom(methods,validObject)
+importFrom(shiny,brushOpts)
+importFrom(shiny,brushedPoints)
 importFrom(shiny,hr)
 importFrom(shiny,observeEvent)
+importFrom(shiny,plotOutput)
+importFrom(shiny,renderPlot)
+importFrom(shiny,updateSelectizeInput)
 importFrom(shinyWidgets,addSpinner)
 importMethodsFrom(iSEE,.cacheCommonInfo)
 importMethodsFrom(iSEE,.createObservers)
 importMethodsFrom(iSEE,.defineDataInterface)
+importMethodsFrom(iSEE,.defineInterface)
 importMethodsFrom(iSEE,.defineOutput)
 importMethodsFrom(iSEE,.fullName)
 importMethodsFrom(iSEE,.generateOutput)
