rename pathways generic and update metadata names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,7 @@ exportMethods(embedPathwaysResults)
 exportMethods(featuresStats)
 exportMethods(initialize)
 exportMethods(pathwayType)
-exportMethods(pathways)
+exportMethods(pathwaysList)
 importClassesFrom(SummarizedExperiment,SummarizedExperiment)
 importClassesFrom(iSEE,Panel)
 importClassesFrom(iSEE,Table)
