add getters for pathways analysis results

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(PathwaysTable)
 export(embedPathwaysResults)
 export(embedPathwaysResultsMethods)
 export(iSEEfgseaResults)
+export(pathwaysResults)
+export(pathwaysResultsNames)
 exportClasses(FgseaEnrichmentPlot)
 exportClasses(PathwaysTable)
 exportClasses(iSEEpathwaysResults)
