add observer for double-click (to clear brush)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ importFrom(iSEE,.multiSelectionActive)
 importFrom(iSEE,.organizationHeight)
 importFrom(iSEE,.replaceMissingWithFirst)
 importFrom(iSEE,.requestActiveSelectionUpdate)
+importFrom(iSEE,.requestUpdate)
 importFrom(iSEE,.retrieveOutput)
 importFrom(iSEE,.selectInput.iSEE)
 importFrom(iSEE,.selectizeInput.iSEE)
