add function to simulate data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(embedPathwaysResultsMethods)
 export(iSEEfgseaResults)
 export(pathwaysResults)
 export(pathwaysResultsNames)
+export(simulateExampleData)
 exportClasses(FgseaEnrichmentPlot)
 exportClasses(PathwaysTable)
 exportClasses(iSEEpathwaysResults)
