add missing dependencies to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
 importFrom(S4Vectors,setValidity2)
+importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_rect)
 importFrom(iSEE,.addSpecificTour)
@@ -73,6 +74,8 @@ importFrom(shiny,plotOutput)
 importFrom(shiny,renderPlot)
 importFrom(shiny,updateSelectizeInput)
 importFrom(shinyWidgets,addSpinner)
+importFrom(stats,rnbinom)
+importFrom(stats,rnorm)
 importMethodsFrom(iSEE,.cacheCommonInfo)
 importMethodsFrom(iSEE,.createObservers)
 importMethodsFrom(iSEE,.defineDataInterface)
