--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,22 @@
 Package: iSEEpathways
 Title: iSEE extension for panels related to pathway analysis
 Version: 0.99.0
-Date: 2023-07-18
-Authors@R:
+Date: 2023-09-04
+Authors@R: 
     c(person("Kevin", "Rue-Albrecht", email = "kevinrue67@gmail.com",
              role = c("aut", "cre"),
-             comment = c(ORCID = "0000-0003-3899-3872")))
+             comment = c(ORCID = "0000-0003-3899-3872")),
+    person("Thomas", "Sandmann", email = "tomsing1@gmail.com",
+             role = c("ctb"),
+             comment = c(ORCID = "0000-0002-6601-8890")),
+    person("Denali Therapeutics", role = c("fnd")))
 Description: This package contains diverse functionality to extend the usage
     of the iSEE package, including additional classes for the panels or modes
     facilitating the analysis of pathway analysis results.
+    This package does not perform pathway analysis. Instead, it provides methods
+    to embed precomputed pathway analysis results in a SummarizedExperiment
+    object, in a manner that is compatible with interactive visualisation
+    in iSEE applications.
 License: Artistic-2.0
 URL: https://github.com/iSEE/iSEEpathways
 BugReports: https://support.bioconductor.org/t/iSEEpathways
