Import ggplot2::labs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ importFrom(S4Vectors,setValidity2)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_rect)
+importFrom(ggplot2,labs)
 importFrom(iSEE,.addSpecificTour)
 importFrom(iSEE,.createProtectedParameterObservers)
 importFrom(iSEE,.defineDataInterface)
