--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,15 @@ License: Artistic-2.0
 URL: https://github.com/iSEE/iSEEpathways
 BugReports: https://support.bioconductor.org/t/iSEEpathways
 biocViews: Software,
-    Infrastructure
+    Infrastructure,
+    DifferentialExpression,
+    GeneExpression, 
+    GUI, 
+    Visualization,
+    Pathways, 
+    GeneSetEnrichment,
+    GO, 
+    ShinyApps
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
