--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: iSEEpathways
 Title: iSEE extension for panels related to pathway analysis
-Version: 0.99.0
-Date: 2023-09-06
+Version: 0.99.1
+Date: 2023-09-19
 Authors@R: 
     c(person("Kevin", "Rue-Albrecht", email = "kevinrue67@gmail.com",
              role = c("aut", "cre"),
@@ -25,7 +25,15 @@ License: Artistic-2.0
 URL: https://github.com/iSEE/iSEEpathways
 BugReports: https://support.bioconductor.org/t/iSEEpathways
 biocViews: Software,
-    Infrastructure
+    Infrastructure,
+    DifferentialExpression,
+    GeneExpression, 
+    GUI, 
+    Visualization,
+    Pathways, 
+    GeneSetEnrichment,
+    GO, 
+    ShinyApps
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
